--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@fullcalendar/daygrid": "^4.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.4",
     "@syncfusion/ej2-angular-richtexteditor": "^16.4.55",
+    "@types/html2canvas": "0.0.35",
+    "@types/jspdf": "^1.3.1",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
@@ -35,7 +37,9 @@
     "font-awesome": "^4.7.0",
     "fullcalendar": "3.6.1",
     "hammerjs": "^2.0.8",
+    "html2canvas": "^1.0.0-rc.3",
     "jquery": "^3.4.1",
+    "jspdf": "^1.5.3",
     "leaflet": "^1.5.1",
     "moment": "^2.24.0",
     "ng-fullcalendar": "1.7.1",
